crates/modor/tests/compilation/compile_fail/action_impl_on_invalid_type.rs
#[macro_use]
extern crate modor;

use modor::*;

fn main() {}

#[derive(Action)]
struct MyAction {}
//~^ error: structs with named fields cannot be actions
